# Rusty_life

./: Cargo.toml  README.md  w.json  world.json
src/: lib.rs  main.rs
