[package]
name = "rusty_life"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
text-block-macros = "0.1.1"
clearscreen = "2.0.1"
miniz_oxide = "0.7.1"
hashbrown = { version = "0.14.0", features = ["serde", "rayon"] }
rayon = "1.7.0"
